bug-fix : z-index

--- a/src/table_numcal.css
+++ b/src/table_numcal.css
@@ -20,4 +20,5 @@ table th[data-numcul='1']{
   border-radius:4px;
   padding:8px;
   font-size:12px;
+  z-index : 1000;
 }
